--- a/admin_portal/templates/admin_portal/withdrawals_admin_tab.html
+++ b/admin_portal/templates/admin_portal/withdrawals_admin_tab.html
@@ -9,7 +9,7 @@
 
         <section class="row gy-5">
             <div class="col-6 col-md-3">
-                <div class="shadow-sm summary rounded-3 p-4 text-center">
+                <div class="shadow-sm summary rounded-3 p-3 text-center">
                     <i class="bi bi-briefcase-fill me-2"></i>
                     
                     <div class="pt-3"> 
@@ -20,7 +20,7 @@
             </div>
 
             <div class="col-6 col-md-3">
-                <div class="shadow-sm summary p-4 text-center">
+                <div class="shadow-sm summary p-3 text-center">
                     <i class="bi bi-briefcase me-2"></i>
                     <div class="pt-3"> 
                         <b>48</b>
@@ -30,7 +30,7 @@
             </div>
 
             <div class="col-6 col-md-3">
-                <div class="shadow-sm summary p-4 text-center">
+                <div class="shadow-sm summary p-3 text-center">
                     <i class="bi bi-briefcase me-2"></i>
                     <div class="pt-3">
                         <b>$4,800</b> 
@@ -40,7 +40,7 @@
             </div>
 
             <div class="col-6 col-md-3">
-                <div class="shadow-sm summary p-4 text-center">
+                <div class="shadow-sm summary p-3 text-center">
                     <i class="bi bi-briefcase me-2"></i>
                     <div class="pt-3"> 
                         <b>$41, 700</b>
@@ -51,6 +51,21 @@
         </section>
 
         <section class="row gy-5 py-4">
+            <article class="col-12 ms-auto pb-3 pt-4">
+                <form class="mb-3 row" method="get">
+                    <div class="col-12 col-sm-9">
+                        <input type="hidden" name="tab" value="{{ active_tab }}"> <!-- Retain active tab -->
+                        <input 
+                            type="text" 
+                            class="form-control form-control-lg" 
+                            name="q" placeholder="Search by username or ID" 
+                            value="{{ search_query }}"
+                        >
+                    </div>
+                    <button type="submit" class="btn btn-primary col-12 col-sm-3">Search</button>
+                </form>
+            </article>
+
             <article class="col-12 mx-auto">
                 <ul class="nav nav-tabs">
                     <li class="nav-item">
