adjusted the returned value and button

--- a/admin_portal/templates/admin_portal/withdrawals_admin_tab.html
+++ b/admin_portal/templates/admin_portal/withdrawals_admin_tab.html
@@ -51,7 +51,7 @@
         </section>
 
         <section class="row gy-5 py-4">
-            <article class="col-12 ms-auto pb-3 pt-4">
+            <article class="col-12 ms-auto pt-4">
                 <form class="mb-3 row" method="get">
                     <div class="col-12 col-sm-9">
                         <input type="hidden" name="tab" value="{{ active_tab }}"> <!-- Retain active tab -->
