Adjustments on the admin tab styling

--- a/admin_portal/templates/admin_portal/withdrawals_admin_tab.html
+++ b/admin_portal/templates/admin_portal/withdrawals_admin_tab.html
@@ -104,11 +104,11 @@
 
                 <div
                     class="
-                        bg-white 
+                        bg-white
                         rounded-2 
                         shadow-sm
                         table-responsive
-                        p-5
+                        p-4
                     "
                 >
                     <table 
@@ -118,7 +118,7 @@
                         animate__fadeInUp
                         animate_slow
                     ">
-                    <thead>
+                    <thead class="table-light">
                         <tr>
                             <!-- <th scope="col">S.NO</th> -->
                             <th scope="col">UserName</th>
