Adjusted the displayed details

--- a/admin_portal/templates/admin_portal/referrals_admin_tab.html
+++ b/admin_portal/templates/admin_portal/referrals_admin_tab.html
@@ -22,8 +22,8 @@
                 </form>
             </article>
             <article class="col-6 col-md-3">
-                <a href="#" class="d-flex summary shadow-sm">
-                    <i class="bi bi-wallet2"></i>
+                <a href="#" class="d-flex shadow-sm border border-primary p-2">
+                    <i class="bi bi-wallet2 text-primary" style="font-size: 24px;"></i>
                     <div class="ps-4">
                         <p><b>{{total_active}}</b></p>
                         <p>Active Users</p>   
@@ -31,8 +31,8 @@
                 </a>
             </article>
             <article class="col-6 col-md-3">
-                <a href="#" class="d-flex summary shadow-sm">
-                    <i class="bi bi-wallet2"></i>
+                <a href="#" class="d-flex shadow-sm border border-danger p-2">
+                    <i class="bi bi-wallet2 text-danger" style="font-size: 24px;"></i>
                     <div class="ps-4">
                         <p><b>{{total_inactive}}</b></p>
                         <p>Inactive Users</p>   
