--- a/admin_portal/templates/admin_portal/admin_sidebar.html
+++ b/admin_portal/templates/admin_portal/admin_sidebar.html
@@ -101,7 +101,7 @@
           aria-controls="content-admin-reports" 
           aria-selected="false"
       >
-          <i class="bi bi-question-circle-fill me-3"></i>
+          <i class="bi bi-person-fill-exclamation me-3"></i>
           Reports
       </a>
     </li>
@@ -115,7 +115,7 @@
             aria-controls="content-admin-notifications" 
             aria-selected="false"
         >
-            <i class="bi bi-question-circle-fill me-3"></i>
+            <i class="bi bi-bell me-3"></i>
             Notifications
         </a>
       </li>
