added more paddings

--- a/admin_portal/templates/admin_portal/referrals_admin_tab.html
+++ b/admin_portal/templates/admin_portal/referrals_admin_tab.html
@@ -9,8 +9,8 @@
 
         <section class="row gy-5">
             <article class="col-12 col-md-6">
-                <form class="mb-3 row" method="get">
-                    <div class="col-12 col-sm-9">
+                <form class="mb-3" method="get">
+                    <div class="col-12">
                         <input 
                             type="text" 
                             class="form-control form-control-lg" 
@@ -18,7 +18,7 @@
                             value=""
                         >
                     </div>
-                    <button type="submit" class="btn btn-primary col-12 col-sm-3">Search</button>
+                    <button type="submit" class="btn btn-primary col-11 col-md-6 mt-3">Search</button>
                 </form>
             </article>
             <article class="col-6 col-md-3">
@@ -43,10 +43,11 @@
 
         <section class="row gy-5 py-4">
             <article class="col-12 mx-auto">
-                <div>
+                <div class="table-responsive py-4">
                     <table 
                     class="
                         table
+                        table-striped
                         animate__animated
                         animate__fadeInUp
                         animate_slow
