css to handle textarea size

--- a/admin_portal/static/admin_portal/css/admin_portal.css
+++ b/admin_portal/static/admin_portal/css/admin_portal.css
@@ -132,6 +132,11 @@
     padding: 0 15px;
 }
 
+
+.floating_textarea_height{
+    height: 200px !important;
+}
+
   
 @media (max-width: 768px) {
     .main-content {
