--- a/users/templates/users/withdrawals_tab.html
+++ b/users/templates/users/withdrawals_tab.html
@@ -67,9 +67,9 @@
 
         <!-- === Withdrawals Histories === -->
          <section class="row pt-5">
-            <div class="col-12 table-responsive">
+            <div class="col-12 table-responsive p-3 bg-white rounded-4">
                 <table class="table mt-4 table-hover">
-                    <thead class="bg-light">
+                    <thead class="table-primary">
                         <tr>
                             <th scope="col">WITHDRAWAL'S CODE</th>
                             <th scope="col">From</th>
